--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,7 +10,7 @@ $sidebar-menu-item-color: #545a6d;
 $sidebar-menu-sub-item-color: #545a6d;
 $sidebar-menu-item-icon-color: #7f8387;
 $sidebar-menu-item-hover-color: #383c40;
-$sidebar-menu-item-active-color: #556ee6;
+$sidebar-menu-item-active-color: #833177;
 $sidebar-width: 250px;
 $sidebar-collapsed-width: 70px;
 $sidebar-width-sm: 160px;
@@ -45,7 +45,7 @@ $footer-color: #74788d;
 $topnav-bg: #fff;
 
 $menu-item-color: #545a6d;
-$menu-item-active-color: #556ee6;
+$menu-item-active-color: #833177;
 
 // Right Sidebar
 $rightbar-width: 280px;
@@ -110,7 +110,7 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue: #556ee6;
+$blue: #833177;
 $indigo: #564ab1;
 $purple: #6f42c1;
 $pink: #e83e8c;
