--- a/src/assets/scss/custom/pages/_authentication.scss
+++ b/src/assets/scss/custom/pages/_authentication.scss
@@ -71,6 +71,12 @@
     }
 }
 
+.react-tel-input .form-control{
+    width: 435px;
+}
+ .MuiTabs-indicator{
+    background-color: purple !important;
+}
 .auth-review-carousel{
     &.owl-theme {
         .owl-dots {
