delete all pat records,rotate and zoom,jwt header for api's

--- a/src/assets/scss/custom/pages/_authentication.scss
+++ b/src/assets/scss/custom/pages/_authentication.scss
@@ -74,6 +74,13 @@
 .react-tel-input .form-control{
     width: 435px;
 }
+
+.lg-css3.lg-slide.lg-use-css3 .lg-item.lg-current{
+    transform: rotate(270deg) !important;
+}
+// .lg-outer .lg-item.lg-complete.lg-zoomable .lg-img-wrap {
+//     transform: rotate(270deg) !important;
+// }
  .MuiTabs-indicator{
     background-color: purple !important;
 }
