--- a/src/assets/scss/custom/pages/_authentication.scss
+++ b/src/assets/scss/custom/pages/_authentication.scss
@@ -81,6 +81,14 @@
 // .lg-outer .lg-item.lg-complete.lg-zoomable .lg-img-wrap {
 //     transform: rotate(270deg) !important;
 // }
+
+.react-datepicker__input-container input{
+    width: 100% !important;
+    height: 38px !important;
+    border: 1px solid #ced4da !important;
+    border-radius: 0.25rem !important;
+  }
+
  .MuiTabs-indicator{
     background-color: purple !important;
 }
