calender,socket changes

--- a/src/assets/scss/custom/pages/_authentication.scss
+++ b/src/assets/scss/custom/pages/_authentication.scss
@@ -113,3 +113,9 @@
    flex: inherit !important;
     height: 600px !important;
   }
+
+  .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root{
+    height: 38px;
+border-radius: 5px;
+border-color: black !important;
+  }
