dashboard table changes

--- a/src/assets/scss/custom/pages/_authentication.scss
+++ b/src/assets/scss/custom/pages/_authentication.scss
@@ -119,3 +119,9 @@
 border-radius: 5px;
 border-color: black !important;
   }
+
+  
+  .row-height {
+    height: 5rem !important;
+    white-space: nowrap;
+  }
